# osu-ds

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  changelog-2009.txt  debug.bat  osuds.pnproj  osuds.pnps  osuds.ppg  rebuild.bat
arm7/: Makefile
arm7/source/: main.cpp
arm9/: Makefile
arm9/source/: defines.h  exception.c  main.cpp
fonts/: 4x6_a.bmf
source/: defines.h  exception.c
source/Beatmaps/: Beatmap.cpp  Beatmap.h  BeatmapElements.cpp  BeatmapElements.h  BeatmapManager.cpp  BeatmapManager.h  DifficultyManager.cpp  DifficultyManager.h
source/GameplayElements/: HitObjectManager.cpp  HitObjectManager.h  Lifebar.cpp  Lifebar.h  ScoreManager.cpp  ScoreManager.h
source/Graphics/: GfxInfo.cpp  GfxInfo.h  GraphicsManager.cpp  GraphicsManager.h  SpriteContainer.cpp  SpriteContainer.h  SpriteManager.cpp  SpriteManager.h  Transformation.cpp  Transformation.h  pAnimation.cpp  pAnimation.h  pSprite.cpp  pSprite.h
source/Helpers/: AudioManager.cpp  AudioManager.h  FileReader.cpp  FileReader.h  InputHelper.cpp  InputHelper.h  MathHelper.cpp  MathHelper.h
source/HitObjects/: HitCircle.cpp  HitCircle.h  HitObject.cpp  HitObject.h  HitSlider.cpp  HitSlider.h  HitSpinner.cpp  HitSpinner.h
source/Libraries/: ByteMapFont.c  ByteMapFont.h  gfxconsole.c  gfxconsole.h  nitrofs.c  nitrofs.h
source/Modes/: Mode.cpp  Mode.h  ModeLoader.cpp  Player.cpp  Player.h  SongSelect.cpp  SongSelect.h
source/Rulesets/: Ruleset.cpp  Ruleset.h  RulesetOsu.cpp  RulesetOsu.h
source/System/: GameBase.cpp  GameBase.h  GameClock.cpp  GameClock.h  ICallback.h  (+2 more)
(+68 files in other folders)
